Add more options for gearset stuff.

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -484,7 +484,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -689,7 +689,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -894,7 +894,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -1099,7 +1099,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -1304,7 +1304,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -1509,7 +1509,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -1714,7 +1714,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -1919,7 +1919,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -2124,7 +2124,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -2329,7 +2329,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -2534,7 +2534,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -2739,7 +2739,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -2944,7 +2944,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -3149,7 +3149,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -3354,7 +3354,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -3559,7 +3559,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -3764,7 +3764,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
@@ -3969,7 +3969,7 @@ collections:
             summary: "{{fields.name}}"
             fields:
               - {label: "Name", name: "name", widget: "string"}
-              - {label: "Type", name: "type", widget: "select", options: ["etro"], default: "etro"}
+              - {label: "Type", name: "type", widget: "select", options: ["etro", "ariyala", "spreadsheet", "sleepyshiba"], default: "etro"}
               - {label: "Link", name: "link", widget: "string"}
               - {label: "Description", name: "description", widget: "markdown", required: false, default: ""}
       - label: "Stat Priority"
