It helps if I put the extension right

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,6 +13,6 @@ jobs:
       - name: yaml-lint
         uses: ibiqlik/action-yamllint@v3
         with:
-          file_or_dir: static/admin/config.yaml
+          file_or_dir: static/admin/config.yml
           # TODO: we should probably add this to the root of the repo
           # config_file: .yamllint.yml
